@@ -18,6 +18,8 @@ client/csocket.py
 server/ssocket.py
 server/banticket.py
 server/filter.py
+server/filtergamin.py
+server/filterpoll.py
 server/server.py
 server/datestrptime.py
 server/failticket.py
